--- a/MAuthen.Data/MAuthen.Api/appsettings.Development.json
+++ b/MAuthen.Data/MAuthen.Api/appsettings.Development.json
@@ -1,4 +1,11 @@
 {
+  "jwt": {
+    "issuer": "MAuthen",
+    "audience": "MAuthen",
+    "secretKey": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRINGTHIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRINGTHIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRINGTHIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRINGTHIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING",
+    "expiryMinutes": "1",
+    "validateLifetime": true
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
