--- a/TestIntegrationApplication/TestIntegrationApplication.csproj
+++ b/TestIntegrationApplication/TestIntegrationApplication.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="jose-jwt" Version="2.5.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.0.0">
       <PrivateAssets>all</PrivateAssets>
